samples/_failures_safe/1761004864_aee0e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc4349e2.c: In function ‘main’:
./samples/SAFE/__tmp_dc4349e2.c:174:5: error: expected declaration or statement at end of input
  174 |     int len = strlen(input);
      |     ^~~
